# acquiring

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  README.rst  alembic.ini  docker-compose.yaml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
acquiring/: __init__.py  apps.py  enums.py  models.py  settings.py  utils.py
acquiring/domain/: __init__.py  blocks.py  decision_logic.py  events.py  flow.py  flows.py  payment_attempts.py  payment_methods.py  payments.py  providers.py  sagas.py
acquiring/models/: __init__.py  django.py  sqlalchemy.py
acquiring/protocols/: __init__.py  events.py  payments.py  primitives.py  providers.py  repositories.py  storage.py
acquiring/storage/: __init__.py  django.py  sqlalchemy.py
django_acquiring/: __init__.py  apps.py  manage.py  models.py  repositories.py  settings.py  urls.py
django_acquiring/dispatchers/: __init__.py  decision_logic.py  dispatchers.py  protocols.py
django_acquiring/django_acquiring/: asgi.py  settings.py  wsgi.py
django_acquiring/domain/: __init__.py  blocks.py  decision_logic.py  events.py  flow.py  orders.py  payments.py  providers.py
django_acquiring/events/: domain.py  models.py  repositories.py
django_acquiring/flows/: __init__.py  protocols.py
docs/: conf.py  index.md  requirements.txt
qa/: Dockerfile  README.md  entrypoint.sh  requirements.txt  wait-for-it.sh
requirements/: development-django.txt  development.txt  packaging.txt
tests/: conftest.py  domain_factories.py  factories.py  protocols.py  test_files.py  test_migrations.py
(+171 files in other folders)
